--- a/appliaction/study/view/index/about/index.html
+++ b/appliaction/study/view/index/about/index.html
@@ -29,9 +29,9 @@
         	<div class="notice width1200" style="margin:0 auto">
             	<div class="tab-hd">
             		<ul class="tab-nav">
-            			<li ><a href="#" >恒鼎学院简介</a></li>
-                        <li class="on"><a href="#" >联系我们</a></li>
-                        <li ><a href="#" >合作院校</a></li>
+            			<li {if $cid == 10}class="on"{/if}><a href="#" >恒鼎学院简介</a></li>
+                        <li {if $cid == 11}class="on"{/if}><a href="#" >联系我们</a></li>
+                        <li {if $cid == 12}class="on"{/if}><a href="#" >合作院校</a></li>
             		</ul>
             	</div>
             	<div class="tab-bd clearfix">
