--- a/appliaction/study/view/index/hight_school/detail.html
+++ b/appliaction/study/view/index/hight_school/detail.html
@@ -88,10 +88,10 @@
          	</div>
         	<div class="cont_right fr">
             	<div class="teacher clearfix">
-                	<div class="te_img"><img src="/ststic/study/images/team6.jpg" /></div>
-                    <b>授课老师 : 大卫</b>
-                    <span>ETS官方培训师、British Council（英国教育文化协会）雅思考试年度工作坊特邀嘉宾.</span>
-                	<p><i>好评度<em>85%</em></i><i>课程数<em>25</em></i><i>学生数<em>100人</em></i></p>
+                	<div class="te_img"><img src="{$data['teacher']['data']['thumb']}" /></div>
+                    <b>授课老师 : {$data['teacher']['data']['title']}</b>
+                    <span>{$data['teacher']['data']['description']}</span>
+                	<p><i>好评度<em>85%</em></i><i>课程数<em>{$data['teacher']['data']['course_num']}</em></i><i>学生数<em>{$data['teacher']['data']['student_num']}人</em></i></p>
                 </div>
             	<div class="rec clearfix">
                 	<h3>推荐课程</h3>
