--- a/appliaction/study/view/index/must_read/index.html
+++ b/appliaction/study/view/index/must_read/index.html
@@ -19,7 +19,7 @@
 	{include public/top}
     <div class="banner clearfix">
     	<div class="banner_box">
-        	<img src="images/banner01.png" />
+        	<img src="/ststic/study/images/banner01.png" />
         </div>
     </div>                                                                                                                    
     <div class="must_cont clearfix adjust">
