--- a/appliaction/admin/view/content/exam/edit.html
+++ b/appliaction/admin/view/content/exam/edit.html
@@ -27,6 +27,19 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
+								<span>考试时间[分钟]</span>
+							</label>
+							<div class="col-sm-5">
+								<input type="text" value="{??$data['exam_time']}" name="exam_time" placeholder="考试时间" class="form-control">	
+							</div>
+							<div class="clos-sm-3">
+								<p class="form-control-static">0则表示不限制时间</p>
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
 								<span>排序</span>
 							</label>
 							<div class="col-sm-8">
