--- a/appliaction/admin/view/content/exam/edit_question.html
+++ b/appliaction/admin/view/content/exam/edit_question.html
@@ -10,17 +10,17 @@
   	<body>
 	<div id="console-setting-menus-edit">
 		<div class="modal-content">
-			<form class="form-horizontal" role="form" action="">
+			<form class="form-horizontal" action="">
 				<div class="panel-body">
 					<fieldset>
-
+						
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger">*</span>
 								<span>题目名称</span>
 							</label>
 							<div class="col-sm-8">
-								<input type="text" value="{??$data['name']}" name="name" placeholder="题目名称" class="form-control">	
+								<input type="text" value="{??$data['title']}" name="title" placeholder="题目名称" class="form-control">	
 							</div>
 						</div>
 							
@@ -32,8 +32,8 @@
 							 <div class="col-sm-8">
 								<select name="type" class="form-control w160" data-selected="{??$data['type']}">
 									<option value="0">答案类型</option>
-									{loop $treeList $key $value}
-									<option value="{$key}" >{$value}</option>
+									{loop $other['typeCopy'] $key $value}
+										<option value="{$key}" >{$value}</option>
 									{/loop}
 								</select>
 							</div>
@@ -42,41 +42,48 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
-								<span>课程安排</span>
+								<span>答案</span>
 							</label>
 							<div class="col-sm-8" id="course">
+								{if !isset($data['id'])}
 								<div class="container-fluid" style="padding-bottom: 10px;">
-									<div class="col-sm-3 pull-left">
-										<input type="text" value="" name="content[]"  class="form-control " placeholder="输入选择答案">	
+									<div class="col-sm-7 pull-left">
+										<input type="text"  name="other[answer][]" class="form-control " placeholder="输入选择答案">	
 									</div>
-									<div class="col-sm-3 pull-left">
-										<input type="checkbox"> 答案
+									<div class="col-sm-2 pull-left">
+										<div class="checkbox">
+											<input type="checkbox" name="other[is_answer][]" value="1"> 答案
+										</div>
 									</div>
 									<div class="col-sm-3">
 										<a class="btn btn-primary add-syllabus">添加</a>
 										<a class="btn btn-primary del-add-syllabus">删除</a>
 									</div>
 								</div>
-							</div>
-						</div>
-						
-						<div class="form-group radio"  data-radio="{??$data['status']}">
-							<label class="control-label col-sm-3">状态：</label>
-							<div class="radio-inline">
-								<label>
-									<input type="radio"  name="status" value="1" > 开启
-								</label>
-							</div>
-							<div class="radio-inline">
-								<label >
-									<input type="radio"  name="status" value="0"> 关闭
-								</label>
+								{else}
+									{loop $data['content'] $value}
+									<div class="container-fluid" style="padding-bottom: 10px;">
+										<div class="col-sm-7 pull-left">
+											<input type="text"  name="other[answer][]" class="form-control" placeholder="输入选择答案" value="{$value['answer']}">	
+										</div>
+										<div class="col-sm-2 pull-left">
+											<div class="checkbox">
+												<input type="checkbox" name="other[is_answer][]" value="1" {if $value['is_answer']}checked{/if}> 答案
+											</div>
+										</div>
+										<div class="col-sm-3">
+											<a class="btn btn-primary add-syllabus">添加</a>
+											<a class="btn btn-primary del-add-syllabus">删除</a>
+										</div>
+									</div>
+									{/loop}
+								{/if}
 							</div>
 						</div>
 					</fieldset>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary btn-comply" click="comply">确定</button>
+					<button type="button" class="btn btn-primary btn-comply">确定</button>
 					<button type="button" class="btn btn-default" id="btn-close">取消</button>
 				</div>
 			</form>
@@ -94,6 +101,7 @@
 			$(this).parents('.container-fluid').remove();
 		}
 	});
+
 	</script>
 </body>
 </html>
