--- a/appliaction/admin/view/content/exam/question_list.html
+++ b/appliaction/admin/view/content/exam/question_list.html
@@ -17,7 +17,7 @@
 							<h5>菜单列表</h5>
 						</div>
 						<div class="pull-right">
-							<a class="btn btn-primary btn-open" config-href="{F:url('edit_question')}"  config-height="70%" config-width="70%">添加题目</a>
+							<a class="btn btn-primary btn-open" config-href="{F:url('edit_question',array('exam_id'=>$id))}"  config-height="70%" config-width="70%">添加题目</a>
 						</div>
 					</div>
 					<form class="form-inline ng-pristine ng-valid" action=""  method="get">
@@ -38,7 +38,7 @@
 											<th style="width:75px;">#</th>
 											<th style="width:75px;">ID</th>
 											<th>标题</th>
-											<th style="width:120px;">状态</th>
+											<th style="width:120px;">类型</th>
 											<th style="width:160px; text-align:center;">编辑/操作</th>
 										</tr>
 									</thead>
@@ -47,11 +47,11 @@
 									 	<tr v-for="list in list">
 									 		<td><input type="text" class="form-control" value="{$value['sort']}" name="id[{$value['id']}]"></td>
 											<td>{$value['id']}</td>
-											<td>{$value['name']}</td>
-											<td>{$value['is_show']}</td>
+											<td>{$value['title']}</td>
+											<td>{$other['typeCopy'][$value['type']]}</td>
 											<td align='center'>
-												<a href="{F:url('lists',array('id'=>$value['id']))}">查看题目</a>
-												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="500px" config-width="60%"  config-title="编辑分类"  class="btn-open">编辑</a>
+												<a config-href="{F:url('edit_question',array('id'=>$value['id'],'exam_id'=>$id))}"  config-height="70%" config-width="80%"  config-title="编辑分类"  class="btn-open">编辑</a>
+												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  class="btn-open">删除</a>
 											</td>
 										</tr>
 										{/loop}
