--- a/appliaction/study/view/index/about/news.html
+++ b/appliaction/study/view/index/about/news.html
@@ -21,7 +21,7 @@
 	{include public/top}
     <div class="banner clearfix">
     	<div class="banner_box">
-        	<img src="images/banner01.png" />
+        	<img src="/ststic/study/images/banner01.png" />
         </div>
     </div>                                                                                                                    
 	
