--- a/appliaction/study/view/teacher/classroom/vip.html
+++ b/appliaction/study/view/teacher/classroom/vip.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
    <head>
-        <title>教师中心-一对一</title>
+        <title>教师中心-一对一教室</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="charset=utf-8" />
         <link rel="stylesheet" href="/ststic/study/css/base.css">
@@ -80,7 +80,7 @@
 <body bgcolor="f1f1f1" >
     
         <div class="center">
-            <div id="navbar"><span><i class="ico2"></i>教师中心-一对一</span><a href="#" class="menubtn"></a>
+            <div id="navbar"><span><i class="ico2"></i>教师中心-一对一教室</span><a href="#" class="menubtn"></a>
         {include public/left_menus}
     </div>
         
@@ -93,15 +93,16 @@
         <div class="t_cr_right fr">
             <div class="img_sp">
             <img src="/ststic/study/images/sp.jpg" />
-                {if !$course} 
-                <span>暂无课程安排</span>
-                {else}
+                {if $course['hd_status'] == 0} 
                     <span class="time" data-time="{$course['start_time']}">距离上课还有：<label>0天0小时0分</label></span>
+                {elseif $course['hd_status'] == 2 || !$course}
+                    <span>暂无课程安排</span>
+                {elseif $course['hd_status'] == 1}
+                    <span>已经开课了请及时进入房间上课</span>
                 {/if}
-
             </div>
-            {if !$course['start_time'] >= TIME + 60*30 && $course} 
-            <a class="join" href="javascript:;" onclick="intoRoom(obj)" data-id="{$course['id']}">立即加入</a>
+            {if !$course['start_time'] >= TIME + 60*30 || $course['hd_status'] == 1} 
+            <a class="join" href="javascript:;" onclick="intoRoom(this)" data-id="{$course['id']}">立即加入</a>
             {/if}
             <b>首次使用直播客户端，请先<a href="http://dl-3.cloudroom.com:8080/Update/Win32_live/1.5.0/Setup/CLOUDROOMLive_1.5.0.exe">下载</a>安装</b>
         </div>
