--- a/public/ststic/study/css/mob.css
+++ b/public/ststic/study/css/mob.css
@@ -589,5 +589,20 @@
 		line-height:16px;
 		font-size:12px;
 	}
+	.reg .reg_box form p{
+		width:100%;
+	}
+	.reg .reg_box form p span{
+		display:block;
+		width:100%;
+	}
+	.reg .reg_box  form input{
+		width:calc(100% - 40px) !important;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		line-height:45px;
+		height:45px !important;
+	}
 }
 	
