--- a/appliaction/admin/view/content/article_edit/edit_3.html
+++ b/appliaction/admin/view/content/article_edit/edit_3.html
@@ -184,6 +184,17 @@
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>上传文件</span>
+							</label>
+							<div class="col-sm-1">
+								<a class="btn btn-primary pull-left btn-files" data-name="video_url" data-value='{??$data['video_url']}' data-path="test" data-max="1">添加文件</a>
+							</div>
+							<div class="col-sm-8">
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
 								<span>课程安排</span>
 							</label>
