--- a/appliaction/study/view/teacher/classroom/vip.html
+++ b/appliaction/study/view/teacher/classroom/vip.html
@@ -17,65 +17,6 @@
 
         <script type="text/javascript" src="/ststic/study/js/common.js"></script>
         <script type="text/javascript" src="/vendor/layer/layer.js"></script>
-        <script type="text/javascript">
-            //44744672
-        var params = { 
-            RequestId : '123456789', 
-            UserName :'{F:\denha\Start::$config['yunwu_key']}',
-            UserPswd: '{F:\denha\Start::$config['yunwu_secret']}',
-            DoAction : 'get',  
-            LiveSubject:'{$live['liveSubject']}',
-            LiveID:'',
-            CallBack: 'jsoncallback'
-        }
-
-        function getList(){
-            params.CallBack    = 'getVideo';
-            console.log(params);
-
-            $.ajax({
-                url : 'http://www.cloudroom.com/api/queryLiveAPI',
-                data : params,
-                dataType : 'jsonp',
-                success : function(result){
-                }
-            });
-        }
-            
-        function startLiveAPI(LiveID){
-            params.LiveID = LiveID;
-            params.CallBack    = 'jsoncallback';
-
-            $.ajax({
-                url : 'http://www.cloudroom.com/api/startLiveAPI',
-                data : params,
-                dataType : 'jsonp',
-                success : function(result){
-                }
-            });
-        
-        }
-
-
-        function getVideo(result){
-            console.log(result.Data.LiveList[0].liveID);
-            startLiveAPI(result.Data.LiveList[0].liveID);
-        }
-
-        function jsoncallback(result){
-            //主持人进入直播客户端
-            window.location = result.Data.StartLive;
-            //助理进入直播客户端
-            //window.location = result.Data.MgrLive;
-        }
-
-        function intoRoom(){
-            var id = $(obj).attr('data-id');
-            $.post("{F:url('addLog')}",{id:id},function(){})
-            getList();
-        }
-        </script>
-
    </head>
 <body bgcolor="f1f1f1" >
     
@@ -102,9 +43,9 @@
                 {/if}
             </div>
             {if !$course['start_time'] >= TIME + 60*30 || $course['hd_status'] == 1} 
-            <a class="join" href="javascript:;" onclick="intoRoom(this)" data-id="{$course['id']}">立即加入</a>
+                <a class="join" href="{$meetUrl}"  data-id="{$course['id']}">立即加入</a>
             {/if}
-            <b>首次使用直播客户端，请先<a href="http://dl-3.cloudroom.com:8080/Update/Win32_live/1.5.0/Setup/CLOUDROOMLive_1.5.0.exe">下载</a>安装</b>
+            <b>首次使用会议客户端，请先<a href="http://dl-3.cloudroom.com:8080/Update/Win32_live/1.5.0/Setup/CLOUDROOMLive_1.5.0.exe">下载</a>安装</b>
         </div>
     
     </div>
