--- a/appliaction/study/view/user/classroom/hall.html
+++ b/appliaction/study/view/user/classroom/hall.html
@@ -82,6 +82,7 @@
                 <div class="img_sp" >
                 {if !$live['LiveCode']}
                     <span>暂无授课....</span>
+                    <img src="/ststic/study/images/sp.jpg" /></div>
                 {elseif $course['hd_status'] == 0}
                     <span class="time" data-time="{$course['start_time']}">距离开课还有： <label>0天0小时0分</label></span>
                     <img src="/ststic/study/images/sp.jpg" /></div>
