--- a/appliaction/admin/view/content/exam/edit_question.html
+++ b/appliaction/admin/view/content/exam/edit_question.html
@@ -41,6 +41,16 @@
 
 						<div class="form-group">
 							<label class="control-label col-sm-3">
+								<span class="text-danger">*</span>
+								<span>题目分数</span>
+							</label>
+							<div class="col-sm-8">
+								<input type="text" value="{??$data['score']}" name="score" placeholder="题目得分" class="form-control">	
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="control-label col-sm-3">
 								<span class="text-danger"></span>
 								<span>答案</span>
 							</label>
@@ -52,7 +62,7 @@
 									</div>
 									<div class="col-sm-2 pull-left">
 										<div class="checkbox">
-											<input type="checkbox" name="other[is_answer][]" value="1"> 答案
+											<input type="checkbox" name="other[is_answer][]" data-true-value="1" data-false-value="0"> 答案
 										</div>
 									</div>
 									<div class="col-sm-3">
@@ -68,7 +78,7 @@
 										</div>
 										<div class="col-sm-2 pull-left">
 											<div class="checkbox">
-												<input type="checkbox" name="other[is_answer][]" value="1" {if $value['is_answer']}checked{/if}> 答案
+												<input type="checkbox" name="other[is_answer][]" data-true-value="1" data-false-value="0" {if $value['is_answer']}checked{/if}> 答案
 											</div>
 										</div>
 										<div class="col-sm-3">
