--- a/appliaction/admin/view/content/exam/question_list.html
+++ b/appliaction/admin/view/content/exam/question_list.html
@@ -38,6 +38,7 @@
 											<th style="width:75px;">#</th>
 											<th style="width:75px;">ID</th>
 											<th>标题</th>
+											<th style="width:120px;">分值</th>
 											<th style="width:120px;">类型</th>
 											<th style="width:160px; text-align:center;">编辑/操作</th>
 										</tr>
@@ -48,6 +49,7 @@
 									 		<td><input type="text" class="form-control" value="{$value['sort']}" name="id[{$value['id']}]"></td>
 											<td>{$value['id']}</td>
 											<td>{$value['title']}</td>
+											<td>{$value['score']}</td>
 											<td>{$other['typeCopy'][$value['type']]}</td>
 											<td align='center'>
 												<a config-href="{F:url('edit_question',array('id'=>$value['id'],'exam_id'=>$id))}"  config-height="70%" config-width="80%"  config-title="编辑分类"  class="btn-open">编辑</a>
