--- a/appliaction/admin/view/content/service/edit.html
+++ b/appliaction/admin/view/content/service/edit.html
@@ -76,6 +76,11 @@
 									<input type="radio" name="status"  value="2"> 下架
 								</label>
 							</div>
+							<div class="radio-inline">
+								<label >
+									<input type="radio" name="status"  value="4"> 用户删除
+								</label>
+							</div>
 						</div>
 					</fieldset>
 				</div>
