--- a/appliaction/admin/view/index/index/index.html
+++ b/appliaction/admin/view/index/index/index.html
@@ -25,7 +25,7 @@
 			<nav class="sidebar-inner fl col-md-1">
 				<div class="sidebar-fold" ><span class="glyphicon glyphicon-transfer"></span></div>
 				<ul>
-					{loop $list $key $value}
+					{loop $list['list'] $key $value}
 					<li>
 						<a href="javascript:;" @click="open(key)">
 							<span class="{if $value['id'] == $this->thisConsoleMenusTopId}glyphicon glyphicon-triangle-bottom{else}{$value['icon']}{/if}"></span>{$value['name']}
@@ -34,7 +34,7 @@
 							<dl {if $value['id'] == $this->thisConsoleMenusTopId}style="display:block;"{/if}>
 								{loop $value['child'] $k $v}
 									<dd>
-										<a data-id="{$v['id']}" href="{$v['url']}" target="iframe0"  class="sec-list-show {if $v['id'] == $this->thisConsoleMenusId}cur{/if}" data-name="{$v['name']}">
+										<a data-id="{$v['id']}" data-href="{$v['url']}" target="iframe0"  class="sec-list-show btn-jump-main {if $v['id'] == $this->thisConsoleMenusId}cur{/if}" data-name="{$v['name']}">
 											<span class="{$v['icon']}" ></span>{$v['name']}
 										</a>
 									</dd>
@@ -106,6 +106,48 @@
             $(this).find('dl').css('display', 'none');
         }
 	})
+
+	//收缩一级导航
+    $('.sidebar-fold').click(function() {
+        var width = $(this).width();
+        if (width > 38) {
+            $('.sidebar-inner').width(38);
+        } else {
+            $('.sidebar-inner').width(180);
+        }
+
+    });
+
+    //导航展开下级菜单
+    $('.sidebar-inner ul li').click(function() {
+        //初始化
+        $('.sidebar-inner ul li dl').css('display', 'none');
+        $('.sidebar-inner ul li').each(function() {
+            if ($(this).children().children().eq(0).attr('class') == 'glyphicon glyphicon-triangle-bottom') {
+                $(this).children().children().eq(0).attr('class', 'glyphicon glyphicon-triangle-right');
+            }
+        });
+
+        //展开/收缩
+        var ico = $(this).children().children(':first').attr('class');
+        if (ico == 'glyphicon glyphicon-triangle-right') {
+            $(this).children().children(':first').attr('class', 'glyphicon glyphicon-triangle-bottom');
+            $(this).find('dl').css('display', 'block');
+        } else if (ico == 'glyphicon glyphicon-triangle-bottom') {
+            $(this).children().children(':first').attr('class', 'glyphicon glyphicon-triangle-right');
+            $(this).find('dl').css('display', 'none');
+        }
+
+    })
+
+
+    //一级高亮
+    $('.sidebar-inner dd').click(function() {
+        $('.sidebar-inner dd').each(function() {
+            $(this).find('a').removeClass('cur');
+        })
+        $(this).find('a').addClass('cur');
+    });
 
  	//二级高亮
 	$('.mian-menus').on('click','.product-nav-scene dd',function(){
