--- a/appliaction/study/view/user/classroom/vip.html
+++ b/appliaction/study/view/user/classroom/vip.html
@@ -42,6 +42,7 @@
             </div>
             <div class="t_cr_right fr close">
                 <div class="img_sp"  id="video">
+                <img src="/ststic/study/images/sp.jpg" />
                 {if $course['hd_status'] == 0} 
                     <span class="time" data-time="{$course['start_time']}">距离上课还有：<label>0天0小时0分</label></span>
                 {elseif $course['hd_status'] == 2 || !$course}
@@ -52,6 +53,7 @@
                 {if !$course['start_time'] >= TIME + 60*30 || $course['hd_status'] == 1} 
                     <a class="join" href="{$meetUrl}"  data-id="{$course['id']}">立即加入</a>
                 {/if}
+                </div>
                 <b>首次使用会议客户端，请先<a href="http://dl-3.cloudroom.com:8080/Update/Win32_live/1.5.0/Setup/CLOUDROOMLive_1.5.0.exe">下载</a>安装</b>
             </div>
         </div>
