--- a/appliaction/study/view/user/exam/question.html
+++ b/appliaction/study/view/user/exam/question.html
@@ -19,47 +19,46 @@
    </head>
 <body bgcolor="f1f1f1" >
 	
-        <div class="center">
-        	<header>
-            <div id="navbar"><span><i class="ico2"></i>学生门户-线上考试系统</span><a href="#" class="menubtn"></a>
-            {include public/left_menus}
-            </div>
-            </header>
-        <div class="classroom_right">
-    		<h3 class=" t_students ">线上考试系统</h3>
+<div class="center">
+	<header>
+    <div id="navbar"><span><i class="ico2"></i>学生门户-线上考试系统</span><a href="#" class="menubtn"></a>
+    {include public/left_menus}
+    </div>
+    </header>
+    <div class="classroom_right">
+        <form class="form-horizontal">
+            <input type="hidden" value="{??$data['id']}" name="exam_id">
+            <h3 class=" t_students ">线上考试系统</h3>
         	<div class="t_cr_left fl">
             	<b class="class_b">同学您好！</b>
-                <span class="class_s">本套试题包括选择题和问答题，倒计时考试，时间到会立即关闭考试系统，自动保存到老师后台！</span>
-                <div class="time_ad">
-                	<p>答题倒计时</p>
-                   	<h1 class="alt-1">2h 0m 0s</h1>
-                </div>
+                <span class="class_s">本套试题包括选择题和问答题，请注意答题时间！</span>
+                <a class="begain_ans2 clearfix btn-comply">提交答案</a>
+                <!-- <div class="time_ad">
+                    <p>答题倒计时</p>
+                       <h1 class="alt-1">2h 0m 0s</h1>
+                </div> -->
             </div>
         	<div class="t_cr_right fr">
                 <div class="dati_ul clearfix">
                     <ul class="dati_List clearfix">
                         {loop $data['list'] $key $value}
                         <li id="each">
-                            <p class="dati_name">{$key+1}. {$value['title']}</p>
+                            <p class="dati_name">{$key+1}. ({$other['typeCopy'][$value['type']]}) {$value['title']} </p>
                             <p class="dati_chk">
                                 {loop json_decode($value['content'],true) $k $v}
-                                    <a href="javascript:;"><b>{$other['letter'][$k]}.</b>{$v['answer']}</a>
+                                    <span>
+                                        <input type="checkbox" name="answer[{$value['id']}][]" class="{if $value['type'] == 1}btn-checkbox-radio{/if}" data-true-value="1" data-false-value="0"><b>{$other['letter'][$k]}.</b>{$v['answer']}
+                                    </span>
                                 {/loop}
                             </p>
                         </li>                     
                         {/loop}          
                     </ul>
-
                 </div>
-                
             </div>
-        
-        </div>
-        
-        
-        </div>
-        
-        
+        </form>
+    </div>
+</div>
 </body>
 <script src="/ststic/study/js/jquery.countdown.js"></script>
 <script>
@@ -80,13 +79,17 @@ window.jQuery(function ($) {
 </script>
 
 <script type="text/javascript">
-   $(document).ready(function(){
-    $("#each a").click( 
-  function() {
-           $(this).addClass("background").siblings().removeClass("background"); 
-
-       });
+$(document).ready(function(){
+    $("#each a").click(function() {
+        $(this).addClass("background").siblings().removeClass("background"); 
     });
-    </script>
+
+    $.post('{F:url('exam_start')}',{exam_id:{$data['id']}},function(result){
+        if(!result.status){
+            return layer.msg(result.msg);
+        }
+    },"json");
+});
+</script>
 
 </html>
