--- a/appliaction/study/view/index/public/top_en.html
+++ b/appliaction/study/view/index/public/top_en.html
@@ -7,7 +7,7 @@
         {/if}
         <div class="ch_en" href="javascript:;" >
         	<a href="javascript:;" class="btn-ajax-post" data-id="" config-href="/common/version/switchlg">中文</a>|
-        	<a href="javascript:;" class="btn-ajax-post on">English</a>
+        	<a href="javascript:;" class="on">English</a>
         </div>
         <div class="header_right fr"><input /><a class="search_ico" href="javascript:;">Search</a><a href="{F:url('/index/user/login')}" class="user_ico"><i></i>Member</a></div>
     </div>
