--- a/appliaction/admin/view/content/category/lists.html
+++ b/appliaction/admin/view/content/category/lists.html
@@ -38,7 +38,7 @@
 											<th style="width:75px;">ID</th>
 											<th>标题</th>
 											<th style="width:120px;">状态</th>
-											<th style="width:160px; text-align:center;">编辑/操作</th>
+											<th style="width:180px; text-align:center;">编辑/操作</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -51,6 +51,7 @@
 												<a config-href="{F:url('edit',array('parentid'=>$value['id']))}"  config-height="500px" config-width="60%"  config-title="编辑分类"  class="btn-open">添加子类</a>
 												<a href="{F:url('lists',array('id'=>$value['id']))}">查看子类</a>
 												<a config-href="{F:url('edit',array('id'=>$value['id']))}"  config-height="500px" config-width="60%"  config-title="编辑分类"  class="btn-open">编辑</a>
+												<a config-href="{F:url('del')}" config-tips="确定删除【{$value['name']}】分类?" data-id="{$value['id']}" class="btn-ajax-post">删除</a>
 											</td>
 										</tr>
 										{/loop}
