--- a/appliaction/study/view/index/about/index_en.html
+++ b/appliaction/study/view/index/about/index_en.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="wap-font-scale" content="no">
-	<title>关于我们</title>
+	<title>{$this->parentColumn['bname']}</title>
 	<link rel="stylesheet" href="/ststic/study/css/base.css">
 	<link rel="stylesheet" href="/ststic/study/css/comm.css">
 	<link rel="stylesheet" href="/ststic/study/css/mob.css">
