--- a/appliaction/study/view/index/bbs/detail_en.html
+++ b/appliaction/study/view/index/bbs/detail_en.html
@@ -19,7 +19,7 @@
 
 
 <body>
-	{include public/top}
+	{include public/top_en}
     <div class="banner clearfix">
     	<div class="banner_box">
         	<img src="/ststic/study/images/banner01.png" />
@@ -28,35 +28,35 @@
     <div class="shequ clearfix adjust">
     	<div class="shequ_box width1200">
         	<div class="shequ_left">
-            	<div class="daohang"><a href="/">首页</a><span>>></span><a href="/index/bbs/s/cid/23">恒鼎社区</a><span>>></span>{$data['title']}</div>
+            	<div class="daohang"><a href="/">Home</a><span>>></span><a href="/index/bbs/s/cid/23">Community</a><span>>></span>{$data['title']}</div>
             	<div class="shequ_detail">
                 	<h4 class="title">{$data['title']}</h4>
-                    <p class="time"><span>发布时间：{F:date('Y/m/d',$data['publish_time'])}</span><span>浏览（{$data['hot']}）</span><span>回复（{$data['comment_num']}）</span></p>
+                    <p class="time"><span>Published：{F:date('Y/m/d',$data['publish_time'])}</span><span>Browse（{$data['hot']}）</span><span>Reply（{$data['comment_num']}）</span></p>
                 	<div class="cont">
                     	{$data['content']}
                     </div>
-                    <div class="dz"><a class="zhan btn-ajax-post"  href="javascript:;" config-href="{F:url('like')}" data-id="{$data['id']}" data-type="2"><i class="sprite-praise"></i>赞(<span>{$data['enjoy_num']}</span>)</a></div>
+                    <div class="dz"><a class="zhan btn-ajax-post"  href="javascript:;" config-href="{F:url('like')}" data-id="{$data['id']}" data-type="2"><i class="sprite-praise"></i>Like(<span>{$data['enjoy_num']}</span>)</a></div>
                 </div>
             	<div class="liuyan_pj clearfix"><!-- 留言评价-->
                     <form class="form-horizontal" action="{F:url('comment')}">
                         <input type="hidden" value="{$data['id']}" name="goods_id"></input>
-                    	<h5>我要留言</h5>
-                    	<textarea name="content" cols="" rows="" placeholder="把您想说的写在这里哟~"></textarea>
-                        <a class="btn_fb btn-comply" href="javascript:;">立即发布</a>
+                    	<h5>leave a message</h5>
+                    	<textarea name="content" cols="" rows="" placeholder="Write what you want to say here~"></textarea>
+                        <a class="btn_fb btn-comply" href="javascript:;">Publish now</a>
                     </form>
                 </div>
                 <div class="ly_list">
-                	<h6><span>留言板（{F:count($data['comment'])}）</span></h6>
+                	<h6><span>message board（{F:count($data['comment'])}）</span></h6>
 
                     	<ul class="pl clearfix navgation">
                             {loop $data['comment'] $value}
                         	<li>
                             	<div class="img_user"><img src="{$value['user']['avatar']}"/></div>
-                            	<div class="pl_cont"><p>{$value['user']['nickname']}<span class="time">发布时间：{F:date('Y/m/d',$value['created'])}</span></p>
+                            	<div class="pl_cont"><p>{$value['user']['nickname']}<span class="time">Published：{F:date('Y/m/d',$value['created'])}</span></p>
                                 <p class="cont">{$value['content']}</p>
                                 </div>
                                 <div class="dz_hf">
-                                  <p><input type="button" id="button" value="评论" /><a class="zhan btn-ajax-post" config-href="{F:url('like')}" data-id="{$value['id']}" data-type="3" href="javascript:;"><i class="sprite-praise"></i>赞(<span>{$value['enjoy_num']}</span>)</a>
+                                  <p><input type="button" id="button" value="comment" /><a class="zhan btn-ajax-post" config-href="{F:url('like')}" data-id="{$value['id']}" data-type="3" href="javascript:;"><i class="sprite-praise"></i>Like(<span>{$value['enjoy_num']}</span>)</a>
                                   </p>
                                     <div class="div">
                                       <form class="form-horizontal" action="{F:url('relpy_comment')}">
@@ -64,7 +64,7 @@
                                         <input type="hidden" value="{$value['uid']}" name="to_uid"></input>
                                         <span class="sj"></span>
                                         <textarea name="content" cols="" rows=""></textarea>
-                                        <a href="javascript:;"  class="hf_btn btn-comply">回复</a>
+                                        <a href="javascript:;"  class="hf_btn btn-comply">Reply</a>
                                       </form>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
         	<div class="shequ_right fr">
             	
                 <div class="rec rec_ht">
-                	<h3>热门话题</h3>
+                	<h3>hot topic</h3>
                     <ul>
                       {loop $data['hotList']['list'] $value}
                     	<li><a href="{F:url('/index/bbs/detail',array('cid'=>$value['column_id'],'id'=>$value['id']))}">{$value['title']}</a></li>
@@ -94,12 +94,12 @@
                 </div>
                
             	<div class="rec clearfix">
-                	<h3>推荐课程</h3>
+                	<h3>Recommended Courses</h3>
                 	<ul class="kc_rec">
                         {loop $data['remmondList']['list'] $value}
                         <li>
                             <div class="imgs"><a href="{F:url('/index/course/detail',array('id'=>$value['id']))}"><img src="{$value['thumb']}" /></a></div>
-                            <div class="name">{$value['title']}</div>
+                            <div class="name">{$value['btitle']}</div>
                             <div class="keshi">
                                 {loop $value['characteristics_copy'] $v}
                                     <span><i></i>{$v}</span>
@@ -137,7 +137,7 @@
     </div>
     
 <div class="clearfix"></div>
-    {include public/footer}
+    {include public/footer_en}
 </body>
 <script>jQuery(".focusBox").hover(function(){ jQuery(this).find(".prev,.next").stop(true,true).fadeTo("show",0.2) },function(){ jQuery(this).find(".prev,.next").fadeOut() });
 jQuery(".focusBox").slide({ mainCell:".pic",effect:"fold", autoPlay:true, delayTime:600, trigger:"click"});	</script>
