--- a/appliaction/study/view/index/hight_school/detail_en.html
+++ b/appliaction/study/view/index/hight_school/detail_en.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="wap-font-scale" content="no">
-    <title>{$data['title']}</title>
+    <title>{$data['btitle']}</title>
     {include public/global_css}
 
 	<script src="/ststic/study/js/jquery.min.js"></script>
@@ -17,7 +17,7 @@
 
 
 <body>
-	{include public/top}
+	{include public/top_en}
     <div class="banner clearfix">
     	<div class="banner_box">
         	<img src="/ststic/study/images/banner01.png" />
@@ -26,23 +26,29 @@
     
     <div class="kc_cont clearfix adjust">
     	<div class="cont_box width1200">
-        	<div class="daohang"><a href="/">首页</a><span>>></span><a href="/index/business_school/about/s/cid/6">国际商学院</a><span>>></span>{$data['title']}</div>
+        	<div class="daohang"><a href="/">Home</a><span>>></span><a href="/index/business_school/about/s/cid/6">Business School</a><span>>></span>{$data['btitle']}</div>
             <div class="cont_left fl">
                 <div class="detail clearfix">
                     <div class="img"><img src="{F:imgUrl($data['thumb'],'article')}" /></div>
                     <div class="title_cont">
-                        <b>{$data['title']}</b>
-                        <p style="border-bottom:#ccc 1px solid;height: 10px;"></p>
+                        <b>{$data['btitle']}</b>
+                        <p style="border-bottom:#ccc 1px solid"><span>Target of enrollment:</span><em>{$data['recruit_en']}</em></p>
+                        {if $data['num']}
+                        <p><span>Course cycle:</span>{$data['num']}课时</p>
+                        {/if}
+                        {if $data['class_time']}
+                        <p><span>Class time:</span>{$data['class_time_en']}</p>
+                        {/if}
                         <p class="">
-                            <span>课程价格:{$data['sale_price']}元</span>
+                            <span>price: {$data['sale_price']}</span>
                             {if $data['dis_price'] > 0}
-                            <span>活动价格：{$data['dis_price']}元</span>
+                            <span>Activity price: {$data['dis_price']}</span>
                             {/if}
                         </p>
 
                         {if $data['characteristics_copy']}
                         <p>
-                            <span>特色:</span>
+                            <span>Features:</span>
                             {loop $data['characteristics_copy'] $v}
                                 <strong>{$v}</strong>
                             {/loop} 
@@ -50,26 +56,26 @@
                         {/if}
 
                         <div class="clearfix"></div>
-                        <a class="buy_btn" href="javascript:;" data-href="{F:url('/index/pay/lession',array('id'=>$data['id']))}">立即购买</a>
+                        <a class="buy_btn" href="javascript:;" data-href="{F:url('/index/pay/lession',array('id'=>$data['id']))}">Buy now</a>
                     </div>
                 </div>
 				<div class="notices clearfix width1200" style="margin:0 auto">
                 <div class="tab-hd">
                     <ul class="tab-nav">
-                        <li class="on"><a href="#" >课程介绍</a></li>
-                       <!--  <li ><a href="#" >学员点评</a></li> -->
+                        <li class="on"><a href="#" >Course Introduction</a></li>
+                        <li ><a href="#" >Students Comment</a></li>
                     </ul>
                 </div>
                 <div class="tab-bd clearfix conts">
                     <div class="tab-pal  ">
-                        {$data['content']}
+                        {$data['content_en']}
                     </div>
                     <div class="tab-pal ">
                     	<ul class="pl clearfix">
                             {loop $data['commentList'] $value}
                         	<li>
                             	<div class="img_user"><img src="{$value['user']['avatar']}"/></div>
-                            	<div class="pl_cont"><p>{$value['user']['nickname']}<span class="time">发布时间：{F:date('Y/m/d',$value['created'])}</span></p>
+                            	<div class="pl_cont"><p>{$value['user']['nickname']}<span class="time">Published：{F:date('Y/m/d',$value['created'])}</span></p>
                                 <p class="cont">{$value['content']}</p>
                                 </div>
                             </li>
@@ -81,19 +87,19 @@
                 
          	</div>
         	<div class="cont_right fr">
-            	<!-- <div class="teacher clearfix">
-                                    <div class="te_img"><img src="{$data['teacher']['data']['thumb']}" /></div>
-                                    <b>授课老师 : {$data['teacher']['data']['title']}</b>
-                                    <span>{$data['teacher']['data']['description']}</span>
-                                    <p><i>好评度<em>85%</em></i><i>课程数<em>{$data['teacher']['data']['course_num']}</em></i><i>学生数<em>{$data['teacher']['data']['student_num']}人</em></i></p>
-                                </div> -->
+            	<div class="teacher clearfix">
+                	<div class="te_img"><img src="{$data['teacher']['data']['thumb']}" /></div>
+                    <b>Teacher : {$data['teacher']['data']['btitle']}</b>
+                    <span>{$data['teacher']['data']['description_en']}</span>
+                	<p><i>Praise<em>85%</em></i><i>Courses<em>{$data['teacher']['data']['course_num']}</em></i><i>Students<em>{$data['teacher']['data']['student_num']} people</em></i></p>
+                </div>
             	<div class="rec clearfix">
-                	<h3>推荐课程</h3>
+                	<h3>Recommended courses</h3>
                 	<ul>
                         {loop $data['remmondList']['list'] $value}
                         <li>
                             <div class="imgs"><a href="{F:url('/index/course/detail',array('id'=>$value['id']))}"><img src="{$value['thumb']}" /></a></div>
-                            <div class="name">{$value['title']}</div>
+                            <div class="name">{$value['btitle']}</div>
                             <div class="keshi">
                                 {loop $value['characteristics_copy'] $v}
                                     <span><i></i>{$v}</span>
@@ -116,7 +122,7 @@
     
     
 <div class="clearfix"></div>
-    {include public/footer}                                                                                                  
+    {include public/footer_en}                                                                                                  
 </body>
 <script>
 jQuery(".notices").slide({ titCell:".tab-hd li", mainCell:".tab-bd",delayTime:0 });
