--- a/appliaction/study/view/index/hight_school/lession_en.html
+++ b/appliaction/study/view/index/hight_school/lession_en.html
@@ -13,7 +13,7 @@
 
 
 <body>
-    {include public/top}
+    {include public/top_en}
     <div class="banner clearfix">
     	<div class="banner_box" align="center">
         	<span><img src="/ststic/study/images/banner01.png" /></span>
@@ -21,13 +21,13 @@
     </div>  
     <div class="gj_cont adjust">
     	<div class="hs_box width1200">
-        	<div class="title">{$this->parentColumn['name']}</div>
-            <div class="cont"><p>该团队本着“教学促科研，科研出成果，成果获奖励，成果报项目，项目奖项带队伍，教师队伍促教学”的六环紧扣原则，提出了教改成果六个“一”的目标，即主持一批课题、建设一批精品课程、出版一批规划教材、研发一组考研品牌课程、指导一批学生参加国家赛事并获奖</p></div>
+        	<div class="title">{$this->parentColumn['bname']}</div>
+            <div class="cont"><p>The team sticks to the principle of "six principles of teaching and promoting scientific research, fruitful achievements, rewarding achievements, rewarding projects, winning awards with projects, and promoting teaching through contingent of teachers", put forward the goal of six "one" education reform results, That is, presided over a number of topics, the construction of a number of quality courses, published a number of planning materials, research and development of a group Kaoyan brand courses to guide a group of students to participate in national competitions and awards</p></div>
         	<div class="notice width1200" style="margin:0 auto">
             	<div class="tab-hd">
             		<ul class="tab-nav ">
             			{loop $columnList $value}
-                            <li {if $value['id'] == $cid}class="on"{/if}><a href="{$value['jump_url']}">{$value['name']}</a></li>
+                            <li {if $value['id'] == $cid}class="on"{/if}><a href="{$value['jump_url']}">{$value['bname']}</a></li>
                         {/loop}
             		</ul>
             	</div>
@@ -37,10 +37,10 @@
                             {loop $list['list'] $value}
                         	<li>
                             	<div class="imgs"><a href="{F:url('/index/course/detail',array('id'=>$value['id']))}"><img src="{F:imgUrl($value['thumb'],'article')}" /></a></div>
-                                <div class="name">{$value['title']}</div>
+                                <div class="name">{$value['btitle']}</div>
                                 <div class="keshi"><span>
                                 {if $value['num']}
-                                <i></i>{$value['num']}课时</span><span>
+                                <i></i>{$value['num']} lesson</span><span>
                                 {/if}
                                 
                                 {loop $value['characteristics_copy'] $v}
@@ -50,7 +50,7 @@
                             {/loop}
                         </ul>
                         <div class="clearfix"> </div>
-                            <a href="javascript:;" class="btn-loadmore" config-text="暂无更多" config-href="{F:url('lession_more',array('cid'=>$cid))}" config-page="2" config-elem=".azkc" style="display:block;margin:50px auto; clear:both"><img src="/ststic/study/images/pre.png" /></a>
+                            <a href="javascript:;" class="btn-loadmore" config-text="No more" config-href="{F:url('lession_more',array('cid'=>$cid))}" config-page="2" config-elem=".azkc" style="display:block;margin:50px auto; clear:both"><img src="/ststic/study/images/pre.png" /></a>
                     
             		</div>
             	</div>
@@ -60,6 +60,6 @@
 
     
 <div class="clearfix"></div>
-    {include public/footer}
+    {include public/footer_en}
 </body>
 </html>
