--- a/public/ststic/study/css/comm.css
+++ b/public/ststic/study/css/comm.css
@@ -859,6 +859,18 @@
         background:url("../images/uploadFile.png") no-repeat;
         background-position:8px center;
     }
+    .tab-pal .azkc li .keshi{
+        display:flex;
+        display:-webkit-flex;
+        justify-content: space-between;
+    }
+    .tab-pal .azkc li .keshi span{
+        white-space: nowrap;
+    }
+}
+.cont_box .cont_left .detail .title_cont p span{
+    width:auto;
+    margin-right:20px;
 }
 #pop-data{
     display:none;
